--- a/DoAnTTTT_QuanLyCuaHieuCamDo/DoAnTTTT_QuanLyCuaHieuCamDo/DoAnTTTT_QuanLyCuaHieuCamDo.csproj
+++ b/DoAnTTTT_QuanLyCuaHieuCamDo/DoAnTTTT_QuanLyCuaHieuCamDo/DoAnTTTT_QuanLyCuaHieuCamDo.csproj
@@ -66,6 +66,7 @@
     <Compile Include="DAO\KhachHangDAO.cs" />
     <Compile Include="DAO\LoaiSPDAO.cs" />
     <Compile Include="DAO\PhieuChuocDAO.cs" />
+    <Compile Include="DAO\PhieuLaiDAO.cs" />
     <Compile Include="DAO\SanPhamDAO.cs" />
     <Compile Include="DAO\ThanhLyDAO.cs" />
     <Compile Include="DAO\TypeAccountDAO.cs" />
@@ -92,6 +93,12 @@
     </Compile>
     <Compile Include="Design\DangNhap.Designer.cs">
       <DependentUpon>DangNhap.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Design\DongLai.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Design\DongLai.Designer.cs">
+      <DependentUpon>DongLai.cs</DependentUpon>
     </Compile>
     <Compile Include="Design\KhachHang.cs">
       <SubType>Form</SubType>
@@ -126,6 +133,7 @@
     <Compile Include="DTO\KhachHangDTO.cs" />
     <Compile Include="DTO\LoaiSPDTO.cs" />
     <Compile Include="DTO\PhieuChuocDTO.cs" />
+    <Compile Include="DTO\PhieuLaiDTO.cs" />
     <Compile Include="DTO\SanPhamDTO.cs" />
     <Compile Include="DTO\ThanhLyDTO.cs" />
     <Compile Include="DTO\TypeAccountDTO.cs" />
@@ -153,6 +161,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Design\DangNhap.resx">
       <DependentUpon>DangNhap.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Design\DongLai.resx">
+      <DependentUpon>DongLai.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Design\KhachHang.resx">
       <DependentUpon>KhachHang.cs</DependentUpon>
