--- a/DoAnTTTT_QuanLyCuaHieuCamDo/DoAnTTTT_QuanLyCuaHieuCamDo/DoAnTTTT_QuanLyCuaHieuCamDo.csproj
+++ b/DoAnTTTT_QuanLyCuaHieuCamDo/DoAnTTTT_QuanLyCuaHieuCamDo/DoAnTTTT_QuanLyCuaHieuCamDo.csproj
@@ -202,16 +202,23 @@
     <Compile Include="Design\TrangChu.Designer.cs">
       <DependentUpon>TrangChu.cs</DependentUpon>
     </Compile>
-    <Compile Include="QuanLyCamDoDataSet.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>QuanLyCamDoDataSet.xsd</DependentUpon>
-    </Compile>
     <Compile Include="Report\rptHoaDonCam.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Report\rptHoaDonCam.Designer.cs">
       <DependentUpon>rptHoaDonCam.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Report\rptPhieuChuoc.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Report\rptPhieuChuoc.Designer.cs">
+      <DependentUpon>rptPhieuChuoc.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Report\rptThanhLy.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Report\rptThanhLy.Designer.cs">
+      <DependentUpon>rptThanhLy.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Design\BaoCao.resx">
       <DependentUpon>BaoCao.cs</DependentUpon>
@@ -266,6 +273,12 @@
     <EmbeddedResource Include="Report\rptHoaDonCam.resx">
       <DependentUpon>rptHoaDonCam.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Report\rptPhieuChuoc.resx">
+      <DependentUpon>rptPhieuChuoc.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Report\rptThanhLy.resx">
+      <DependentUpon>rptThanhLy.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -281,17 +294,6 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="QuanLyCamDoDataSet.xsc">
-      <DependentUpon>QuanLyCamDoDataSet.xsd</DependentUpon>
-    </None>
-    <None Include="QuanLyCamDoDataSet.xsd">
-      <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>QuanLyCamDoDataSet.Designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="QuanLyCamDoDataSet.xss">
-      <DependentUpon>QuanLyCamDoDataSet.xsd</DependentUpon>
-    </None>
     <None Include="Resources\icons8_home_60px.png" />
   </ItemGroup>
   <ItemGroup>
